[gd_scene load_steps=6 format=3 uid="uid://co6kb0hlogyyu"]

[ext_resource type="Texture2D" uid="uid://cav0aqfiwmwac" path="res://images/Wolf - Tan - 30x24.png" id="1_m8ij4"]
[ext_resource type="Script" path="res://scripts/monster.gd" id="1_rn14w"]
[ext_resource type="PackedScene" uid="uid://cic3kx3d3wcko" path="res://scenes/Component/hitbox_component.tscn" id="3_1uc61"]
[ext_resource type="PackedScene" uid="uid://falvyc4yjisx" path="res://scenes/Component/health_component.tscn" id="4_br1cs"]
[ext_resource type="PackedScene" uid="uid://2pmycffv7fpg" path="res://scenes/Component/hurtbox_component.tscn" id="4_nygq7"]

[node name="Monster" type="Node2D"]
script = ExtResource("1_rn14w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m8ij4")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_1uc61")]
scale = Vector2(1.00719, 1)
collision_layer = 4
collision_mask = 40
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." instance=ExtResource("4_nygq7")]
position = Vector2(0, 8)
collision_layer = 16
collision_mask = 8

[node name="HealthComponent" parent="." instance=ExtResource("4_br1cs")]

[node name="AttackTimeScaler" type="Node2D" parent="."]
position = Vector2(-4, -29)
scale = Vector2(0.25, 0.25)

[node name="AttackTimeBar" type="ProgressBar" parent="AttackTimeScaler"]
offset_left = 16.0
offset_top = 40.0
offset_right = 24.0
offset_bottom = 76.0
max_value = 1.0
step = 0.001
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="hitTarget" from="HurtboxComponent" to="." method="_on_hurtbox_component_hit_target"]
[connection signal="has_died" from="HealthComponent" to="." method="_on_has_died"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
